--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
+    <div class="body">
     <div class="big-cont">
         <h1>Монеты из драготенных металов</h1>
 <div class="flex-cont">
@@ -175,10 +177,6 @@
 
     </div>    
 </div>
-
-
-
-
-
+</div>
 </body>
 </html>
