--- a/monetka/linkol.html
+++ b/monetka/linkol.html
@@ -11,7 +11,7 @@
          <div class="parent">
              <div class="cha-photo">
                  <img class="big-img1" src="../images/av-linkol.png" alt="av-linkol">  
-                 <img class="big-img2" src="../images/re-linkol.png" alt="baykal-re">
+                 <img class="big-img2" src="../images/re-linkol.png" alt="re-baykal">
              </div>
 
              <div class="cha-text">
@@ -29,7 +29,7 @@
                         <tr class="tr">
                           <td class="td">Номинал на монете, ед. нац. валюты</td>
                           <td class="td">50000 Кипов</td>
-                        </tr class="tr">
+                        </tr>
                         <tr class="tr">
                             <td class="td">Страна-эмитент</td>
                             <td class="td">Лаосская Народно-Демократическая Республика</td>
