--- a/index.html
+++ b/index.html
@@ -1,182 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <title>Монеты</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"/>
+    <title>Get Service</title>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8">
+
+    <base href="service/">
+    <title>Элемент title</title>
+    <meta name="description" content="Növbə gotür və vaxta gənaət et">
+    <meta name="author" content="mqmd917">
 </head>
 
 <body>
-    <div class="body">
-    <div class="big-cont">
-        <h1>Монеты из драготенных металов</h1>
-<div class="flex-cont">
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-20%</p>
-                </div>
-            <img class="img" src="images/av-linkol.png" alt="av-linkol">    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\linkol.html"> Авраам Линкольн</a></h3>
-            <p>Лаосская Народно-Демократическая Республика, 2013
-            <br/>Номинал — 50000 Кипов
-            <br/>Вес — 6 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 22.60 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">4000₽</h3>
-            <p class="p">2000₽</p>
-        </div>
-    </div>
+    <div class="box" id="box">
 
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-10%</p>
-                </div>
-            <img class="img" src="images/av-kenedi.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\kenedi.html">Джон Кеннеди</a></h3>
-            <p>Республика Беларусь, 2013
-            <br/>Номинал — 10 Белорусских рублей
-            <br/>Вес — 14,14 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 32 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">2430₽</h3>
-            <p class="p">2700₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-20%</p>
-                </div>
-            <img class="img" src="images/av-djeferson.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\djeferson.html">Томас Джефферсон</a></h3>
-            <p>Республика Беларусь, 2013                
-            <br/>Номинал — 10 Белорусских рублей
-            <br/>Вес — 14,14 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 32 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">2080₽</h3>
-            <p class="p">2600₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-20%</p>
-                </div>
-            <img class="img" src="images/av-ruzvelt.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\ruzvelt.html">Франклин Д’ Рузвельт</a></h3>
-            <p>Острова Кука, 2009
-            <br/>Номинал — 5 Новозеландский доллар
-            <br/>Вес — 25 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 38,61 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">3680₽</h3>
-            <p class="p">4600₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-10%</p>
-                </div>
-            <img class="img" src="images/av-bob.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\baykal.html">Озеро Байкал</a></h3>
-            <p>Лаосская Народно-Демократическая Республика, 2017
-            <br/>Номинал — 70000 Кипов
-            <br/>Вес — 33 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 39 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">4400₽</h3>
-            <p class="p">4900₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-20%</p>
-                </div>
-            <img class="img" src="images/av-klen.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\vrangel.html">Остров Врангеля</a></h3>
-            <p>Россия, 2012
-            <br/>Номинал — 3 рубля
-            <br/>Вес — 31,1 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 39 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">2000₽</h3>
-            <p class="p">3000₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-10%</p>
-                </div>
-            <img class="img" src="images/av-qaqara.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\qrosqlokner.html">Гросглокнер</a></h3>
-            <p>Республика Палау, 2009
-            <br/>Номинал — 5 Доллар США
-            <br/>Вес — 25 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 38,61 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">2700₽</h3>
-            <p class="p">3100₽</p>
-        </div>
-    </div>
-    <div class="flex-par">
-        <div class="flex-cha-photo">
-            <div class="skidka">
-                <p>-20%</p>
-                </div>
-            <img class="img" src="images/av-los.png" >    
-        </div>
-        <div class="flex-cha-text">
-            <h3 class="name"><a class="a" href="monetka\nosoroq.html">Носорог, гравюра Альбрехта Дюрера</a></h3>
-            <p>Лаосская Народно-Демократическая Республика, 2013
-            <br/>Номинал — 50000 Кипов
-            <br/>Вес — 6 г.
-            <br/>Серебро, 925 проба
-            <br/>Диаметр — 22.60 мм</p>
-        </div>
-        <div class="flex-cha-tsena">
-            <h3 class="h3">5000₽</h3>
-            <p class="p">6000₽</p>
-        </div>
-    </div>
+        <h1>Get Service</h1>
 
-    </div>    
-</div>
-</div>
+        <ul class="no-decoration">
+            <li>
+                <a href="1.html" class="member-url">Dantist</a>
+            </li>
+            <li>
+                <a href="2.html" class="member-url">Avto Service</a>
+            </li>
+            <li>
+                <a href="3.html" class="member-url">Salon Krasoti</a>
+            </li>
+        </ul>
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
